004_k8s/03-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: inventario_ti_frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
        - containerPort: 9101
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
  - name: web
    port: 8501
    targetPort: 8501
    nodePort: 30501
  - name: metrics
    port: 9101
    targetPort: 9101
